MDEV-37503: UBSAN Prepared statement downcast Item_XXX to Item_field invalid

The result of the MDEV-36870 fix, under cursor protocol
resulting in the casting of many not Item_field type to
Item_field in the function mysql_test_update.

We correct by testing if it is an Item_field first
before calling associate_with_target_field.